# HBrain

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  INSTALL_COWORK.md  INSTALL_FOR_AGENTS.md  LICENSE  PRIVACY.md  README.md  STRUCTURE.md  UNINSTALL_FOR_AGENTS.md  install.sh  package.json  pyproject.toml  uninstall.sh
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: mintlify.yml  release.yml
commands/: capture.toml  doctor.toml  setup.toml  tasks.toml  timeline.toml
design/: BOARD_STRUCTURE.md
docs/: docs.json  introduction.mdx  mint.json  quickstart.mdx
docs/guides/: capturing.mdx  querying.mdx  skills.mdx  views.mdx
docs/reference/: event-types.mdx  frontmatter.mdx  html-artifacts.mdx  templates.mdx  vault-structure.mdx
hooks/: hbrain-activate.sh  hooks.json
skill/: SKILL.md  cli.md  design.md  queries.md  vault-setup.md
skill/templates/: tasks.html  timeline.html
skills/hbrain/: SKILL.md  cli.md  design.md
skills/hbrain/templates/: timeline.html
src/brain/: __init__.py  __main__.py  audit.py  cache.py  cli.py  config.py  envelope.py  errors.py  events.py  render.py  schema.py
src/brain/commands/: add.py  init.py  install_skill.py  reindex.py  show.py  timeline.py
src/brain/skills/brain/: SKILL.md
tests/: conftest.py  test_add.py  test_cli.py  test_envelope.py  test_events.py  test_reindex.py  test_show.py  test_timeline.py
tool/: .gitignore  Makefile  go.mod
tool/cmd/brain/: main.go
tool/internal/event/: event.go  event_test.go
tool/internal/frontmatter/: frontmatter.go  frontmatter_test.go
tool/internal/render/: loader.go  loader_test.go  render.go  tasks.go  tasks_test.go  timeline_test.go
tool/internal/render/templates/: timeline.html
tool/internal/skill/: skill.go  skill_test.go  store.go  template.go
tool/internal/vault/: vault.go
tool/internal/view/: search.go  stale.go  stats.go  tasks.go  timeline.go
