[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "living-brain"
version = "0.1.1"
description = "Living Brain — agent-native CLI for a markdown-backed personal knowledge and task store."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Habibi-7", email = "khairullahhabib744@gmail.com" }]
keywords = [
  "agent",
  "ai",
  "cli",
  "claude",
  "knowledge-management",
  "llm",
  "markdown",
  "notes",
  "second-brain",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business",
  "Topic :: Utilities",
]

dependencies = [
  "typer>=0.24.2",
  "pydantic>=2.9",
  "python-ulid>=3.0",
  "python-frontmatter>=1.1.0",
  "pyyaml>=6.0",
]

[project.scripts]
brain = "brain.cli:app"

[project.urls]
Homepage = "https://github.com/Habibi-7/living-brain"
Repository = "https://github.com/Habibi-7/living-brain"
Issues = "https://github.com/Habibi-7/living-brain/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/brain"]

[tool.hatch.build.targets.sdist]
include = [
  "src/brain",
  "README.md",
  "LICENSE",
  "CLAUDE.md",
  "ARCHITECTURE.md",
  "CONTEXT.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
# B008 is idiomatic for Typer (typer.Option/Argument as defaults).
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# Tests may leave unused imports during incremental edits — not worth nagging.
"tests/*" = ["F401"]
